--- a/gaming-series.html
+++ b/gaming-series.html
@@ -16,8 +16,7 @@
 
     <!-- site Favicon -->
     <link rel="icon" href="" sizes="32x32">
-3
-    <!-- css Icon Font -->
+<!-- css Icon Font -->
     <link rel="stylesheet" href="assets/css/vendor/msicons.min.css">
 
     <!-- css All Plugins Files -->
@@ -107,7 +106,7 @@
                         <!-- Header Logo Start -->
                         <div class="align-self-center ms-header-logo">
                             <div class="header-logo">
-                                <a href="index.html"><img src="./assets/akavi logo bhushan 1.png" alt="Site Logo"></a>
+                                <a href="index.html"><img src="./assets/company_logo/Akavilogo.png" alt="Site Logo"></a>
                             </div>
                         </div>
                         <!-- Header Logo End -->
@@ -393,7 +392,7 @@
                         <div class="col ms-header-logo">
                             <div class="header-logo">
                                 <a href="index.html">
-                                    <img src="./assets/akavi logo bhushan 1.png" alt="Site Logo">
+                                    <img src="./assets/company_logo/Akavilogo.png" alt="Site Logo">
                                 </a>
                             </div>
                         </div>
